<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/_1f1d0a9f1f86f161861929b37d993c6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/pravo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#B4AAAA"
        android:gravity="start|center_vertical"
        android:onClick="peshehod"
        android:text="@string/text2"
        android:textColor="#000000"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#B4AAAA"
        android:gravity="start|center_vertical"
        android:onClick="velikClicked"
        android:text="@string/text1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#B4AAAA"
        android:gravity="start|center_vertical"
        android:onClick="pravilno"
        android:text="@string/text3"
        android:textColor="#000000"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#B4AAAA"
        android:gravity="start|center_vertical"
        android:onClick="nikomu"
        android:text="@string/text4"
        android:textColor="#000000"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>